Fixed dark mode icons having a choppy white border

--- a/ruqqus/assets/style/main_dark.scss
+++ b/ruqqus/assets/style/main_dark.scss
@@ -1647,7 +1647,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     text-align: center;
     object-fit: cover;
     color: $white;
-    background-color: #FFFFFF;
 }
 
 .profile-pic .letter {
@@ -1687,7 +1686,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-25 {
@@ -1696,7 +1694,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-30 {
@@ -1705,7 +1702,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-35 {
@@ -1714,7 +1710,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-40 {
@@ -1723,7 +1718,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-50 {
@@ -1732,7 +1726,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-65 {
@@ -1741,7 +1734,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-75 {
@@ -1750,7 +1742,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-100 {
@@ -1759,7 +1750,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
-    background-color: #FFFFFF;
 }
 
 .profile-pic-overlap {
